--- a/src/styles/Shared/Banners/TeacherSlider.scss
+++ b/src/styles/Shared/Banners/TeacherSlider.scss
@@ -48,6 +48,7 @@
         }
         p {
           margin: 0 0 10px;
+          margin-top: 10px;
         }
       }
       &-Image.TeacherSlider-Slide-Image {
