--- a/src/styles/TeachingMethods/TeachingMethods.scss
+++ b/src/styles/TeachingMethods/TeachingMethods.scss
@@ -71,11 +71,17 @@
       &-Text {
         flex-grow: 1;
         h3 {
-          font-size: 2.2em;
+          font-size: 3.2em;
           font-weight: 600;
           letter-spacing: 0.22px;
           line-height: 1.318;
           margin-bottom: 10px;
+        }
+        a {
+          font-size: 22px;
+          font-weight: bold;
+          letter-spacing: 0;
+          line-height: 29px;
         }
         p {
           font-size: 1.8em;
@@ -219,7 +225,7 @@
         &-Text {
           flex-grow: 1;
           h3 {
-            font-size: 2.2em;
+            font-size: 3.2em;
             font-weight: 600;
             letter-spacing: 0.22px;
             line-height: 1.318;
