--- a/src/styles/Testimonials/_TestIntro.scss
+++ b/src/styles/Testimonials/_TestIntro.scss
@@ -4,7 +4,7 @@
   margin: 20px 0 50px;
   align-items: center;
   h1 {
-    font-size: 3.2em;
+    font-size: 5em;
     padding: 0 10px;
     font-weight: 600;
     letter-spacing: -0.72px;
